--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,15 @@
 [tox]
 envlist = my_env
-skipdist = true
+          lint
+          format
+skipsdist = false
 
 [testenv:my_env]
 deps = pytest
+       black
+       flake8
 commands = pytest
+           black ./src/pytoxtest/main.py
+           flake8 ./src/pytoxtest/main.py
+           
+           
