--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,18 @@
 [tox]
-envlist = my_env
+envlist = test
           lint
           format
-skipsdist = false
+skipsdist = true
 
-[testenv:my_env]
+[testenv:test]
 deps = pytest
-       black
-       flake8
 commands = pytest
-           black ./src/pytoxtest/main.py
-           flake8 ./src/pytoxtest/main.py
-           
-           
+
+
+[testenv:lint]
+deps = flake8
+commands = flake8 ./src/pytoxtest/main.py
+
+[testenv:format]
+deps = black
+commands = black ./src/pytoxtest/main.py
