--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,3 +29,10 @@ jobs:
     - name: Run tox
       run: 
         tox -e test
+    - name: Run lint 
+      run: 
+        tox -e lint 
+    - name: Run formatting
+      run: 
+        tox -e format
+    
