--- a/tox.ini
+++ b/tox.ini
@@ -2,17 +2,21 @@
 envlist = test
           lint
           format
+          mypy
 skipsdist = true
 
 [testenv:test]
 deps = pytest
 commands = pytest
 
-
-[testenv:lint]
+[testenv:lint] 
 deps = flake8
 commands = flake8 ./src/pytoxtest/main.py
 
 [testenv:format]
 deps = black
 commands = black ./src/pytoxtest/main.py
+
+[testenv:mypy]
+deps = mypy
+commands = mypy ./src/pytoxtest/main.py
